2007-09-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Check argument's count in object's primitives.
	* src/object/object-class.cc: Check argument's count.
	* src/object/object-test-lookup.cc: Catch exceptions by reference.
	* src/runner/runner.cc: Add "!!!" before errors.

2007-09-09  Thomas Moulard  <thomas.moulard@gmail.com>

	Check argument's count and handle lookup failure.
	* src/object/Makefile.am: Add urbi-exception.hxx.
	* src/object/float-class.cc: Check argument's count.
	* src/object/object-test-lookup.cc: Use UrbiException
        instead of std::exception.
	* src/object/object.cc: Handle lookup failure.
	* src/object/primitives.hh: Check argument's count.
	* src/object/urbi-exception.cc: Add error messsages text.
	* src/object/urbi-exception.hh: Add named constructors.
	* src/object/urbi-exception.hxx: Implement named constructors. New.

2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove useless file.
	* buildnumber.php: Remove.

2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Minor changes.
	* AUTHORS,
	* NEWS,
	* README: Adjust.

2007-09-09  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Minor changes.
	* configure.ac: Aesthetic changes.
	* src/runner/coroutine.cc,
	* src/runner/coroutine.hh: Disable debug traces.
	* src/uconnection.cc: Print debug message only with
	ENABLE_DEBUG_TRACES.

2007-09-09  mefyl  <mefyl@gruntech.net>

	Remove coroutines debug traces.
	* src/console.cc,
	* src/runner/scheduler.cc,
	* src/uconnection.cc: Here.
	* src/runner/runner.hh: Remove trailing whitespace.

2007-09-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Add introspection functions.
	* src/object/atom.hxx: Fix code/primitive printing.
	* src/object/code-class.cc: Send endline after echo.
	* src/object/object-class.cc: Add slotNames, parents, getSlot, setSlot.
	* src/object/object.hh: Add accessor for parents and slots.
	* src/object/object.hxx: Idem.

2007-09-07  Thomas Moulard  <thomas.moulard@gmail.com>

	Handle run-time URBI errors.