@@ -68,9 +68,9 @@ namespace object
 
     object::list_traits::type l;
     BOOST_FOREACH (const Object::slot_type& p, obj->slots_get())
-      l.push_back(p.second);
+      l.push_back (new object::String (p.first.name_get ()));
 
-    return new object::List(l);
+    return new object::List (l);
   }
 
   /// Get parents' list.
